{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e0516872-56e4-448a-aad4-108f5c6d81d4",
            "actions": [
                {
                    "name": "Axis",
                    "type": "Value",
                    "id": "5e1d2730-be50-4fa2-a829-fd17814d577a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Axis2",
                    "type": "Value",
                    "id": "817c227e-2214-4afa-aca1-76bde16cee0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadUp",
                    "type": "Button",
                    "id": "30b31ead-e6ab-4b55-b9e6-55a1cb349f31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadDown",
                    "type": "Button",
                    "id": "60fbfc1f-c2d9-49fa-a1d0-961d0214e12f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadLeft",
                    "type": "Button",
                    "id": "b11264ca-980a-4920-894d-f294e736c823",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPadRight",
                    "type": "Button",
                    "id": "4974d342-8a79-40fc-8f79-3888f3b57995",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "North",
                    "type": "Button",
                    "id": "6d7a1aef-5cdf-4af6-a3dd-3dbbe3b36769",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "South",
                    "type": "Button",
                    "id": "9a49501a-0967-478b-a6ae-58ebe7551eac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "West",
                    "type": "Button",
                    "id": "42ba8cd5-322a-4698-b884-874ce813bb94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "East",
                    "type": "Button",
                    "id": "a38189f6-f1fc-49f5-ae47-c27f2a793af7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L1",
                    "type": "Button",
                    "id": "54670acc-565b-42f5-af23-5eb2b5b008ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L2",
                    "type": "Button",
                    "id": "950c0c56-c817-4877-ab15-93e790326aa8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "L3",
                    "type": "Button",
                    "id": "8748ec9c-2ae1-42d2-b86b-41d13b8d145a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R1",
                    "type": "Button",
                    "id": "50292f9b-641b-4ace-bf81-3a2b7dd50b38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R2",
                    "type": "Button",
                    "id": "33fa1e56-009c-4f43-9d8f-e87bc2ad5613",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "R3",
                    "type": "Button",
                    "id": "daafaf73-cc21-4a20-a2e3-35cb4fd69e51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "3fc9a031-c149-4ec1-88af-a1be4da78ef7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "c14de638-b26a-429d-9f0f-f482d633cf5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "c07fae4e-cf97-4ae8-bfaf-5f8ce5372774",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "ab9ad877-c56d-4d3c-a95c-2538c105d299",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc1bf555-cb2b-46e2-94a2-b6183e334b24",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Axis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abb4b399-9a82-4ecd-878a-7dff4b024c34",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Axis2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f14e5579-fb94-4fb3-8b20-f9d8a9660e02",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DPadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24a3fef4-7a46-4f48-92a2-e937f2b58cc8",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DPadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbc2aea2-fd3d-40ba-9196-03fa7dd72828",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DPadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9496abd-a464-446e-be07-e47db362fa3e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DPadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "241b433f-8edd-4e59-b9e0-8b69c1cd37bc",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "North",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76eb1147-28fa-4ac0-aa4f-80e43b0515f0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "South",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3a9e80f-9218-4218-8805-51bd32e24102",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "West",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1eecdee-28b1-40b5-ac18-63005f5bcd35",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "East",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f647e9d-4f65-4302-9a6e-2557a0134de3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "L1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4a333d9-940f-4747-950f-d2e13a80fdf0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "L2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d817a4f-5209-482c-9aa3-33e60e97099d",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "L3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0aab5365-effd-4481-9bd4-45472460bd3d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "R1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5754ab2-68b0-4ec6-8ada-b1d54a28da41",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "R2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d427ee58-4a5c-40af-ba04-2159527afc39",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "R3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bd17e66-f333-4a39-b569-94f048563d1f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "723313ea-5bd0-42cf-a09a-5bc3a5c14af0",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f2c0fc1-26d2-49e0-a930-cbe549e57882",
                    "path": "<SwitchProControllerHID>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "619b481a-ecf5-47a5-bd1d-8fdb8a6a4c69",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd11901f-260a-4963-8b5a-649b13fea62f",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "919657ad-c69b-4211-a66f-9cdda8949b23",
                    "path": "<SwitchProControllerHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "477a76f9-0ffe-42bd-b873-24e66cc6d19c",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4353e3c5-ee49-4a65-8252-a226c0853cdf",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}